--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -4,110 +4,111 @@ block content
   br
   br
   //- Movie List Summary Section
-  .container
-    .row
-      h3.pl-3 Feature Films:
-    .row
-      .col-12.col-md-8
-        .card.mt-2
-          .card-body
-            h4.card-title Viva Las Vegas
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster1.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+  .bg#mainBackImg
+    .container
+      .row
+        h3.pl-3 Feature Films:
+      .row
+        .col-12.col-md-8
+          .card.mt-2
+            .card-body
+              h4.card-title Viva Las Vegas
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster1.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Paradise Canyon
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster2.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title Paradise Canyon
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster2.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Guys And Dolls
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster3.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title Guys And Dolls
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster3.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title The Thing
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster4.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title The Thing
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster4.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Pirates Of Penzance
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster5.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title Pirates Of Penzance
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster5.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Dragstrip Riot
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster6.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title Dragstrip Riot
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster6.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title La Dolce Vita
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster7.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title La Dolce Vita
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster7.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Vertigo
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster8.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
+            .card-body
+              h4.card-title Vertigo
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster8.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
             br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
-            
-          .card-body
-            h4.card-title Ocean's Eleven
-            .col-sm-4
-              .panel.panel-primary
-                //.panel-heading Anatomy Of A Murder
-                .panel-body
-                  img.img-responsive.img-rounded(src="./images/moviePoster9.jpg", style="width:75%", alt="Movie Poster #1")
-            a.card-link.btn.btn-success.float-right(href="/movies") Info
-            br
-            h6.card-subtitle.text-muted.pt-1.float-left Daily show times
+            .card-body
+              h4.card-title Ocean's Eleven
+              .col-sm-4
+                .panel.panel-primary
+                  //.panel-heading Anatomy Of A Murder
+                  .panel-body
+                    img.img-responsive.img-rounded(src="./images/moviePoster9.jpg", style="width:75%", alt="Movie Poster #1")
+              a.card-link.btn.btn-success.float-right(href="/movies") Info
+              br
+              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
 //-
    .row
     .col-12-.col-md-8
