--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -29,7 +29,7 @@ html
             li.nav-item
               a.nav-link(href="/movies/reserve") Reserve
             li.nav-item
-              a.nav-link(href="/about") Contact
+              a.nav-link(href="/contact") Contact
     //- End Navbar
      
     .container-fluid
