--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -16,7 +16,8 @@ html
           //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
           //img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
       .row.py-3
-        p.af-header-font ...Enjoy the classics of yesterday!
+        .col-12.col-md-10
+          p.af-header-font.text-center ...Enjoy the classics of yesterday!
     //- Navbar Nav Items
     nav.navbar.navbar-expand-md.navbar-dark
       .container  
@@ -29,7 +30,7 @@ html
             li.nav-item
               a.nav-link(href="/movies/reserve") Reserve
             li.nav-item
-              a.nav-link(href="/about") Contact
+              a.nav-link(href="/contact") Contact
     //- End Navbar
      
     .container-fluid
@@ -39,8 +40,6 @@ html
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
       script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
       
-      br
-      br
       //- Footer Section
       footer.fixed-bottom.text-right
         .container
