Add contact form

--- a/app/app_server/views/contact.pug
+++ b/app/app_server/views/contact.pug
@@ -9,7 +9,7 @@ block content
   br
   .card
     .card-body.bg-dark
-      h5.card-title.pb-5.text-white Thanks for your interest in Atomic Films, please fill out this form and we will get back to you as soon as possible.
+      h5.card-title.pb-5.text-white.text-center Thanks for your interest in Atomic Films, please fill out this form and we will get back to you as soon as possible.
       //- WILL NEED TO ADD A /THANKS PAGE TO CONTROLLER IN FUTURE!!!
       form(name="contact", action="/thanks", method="post") 
         .form-group.row
