--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -1,10 +1,9 @@
 extends layout
 
 block content
-  br
-  section.jumbotron.text-center.bg-dark.text-black
+  section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading Movie Synopsis & Details
+      h1.jumbotron-heading-text Film Synopsis & Details
       p.lead.text-white
         | All movies will have a synopsis, schedule for show times, and list of actors/actresses starring in it.
     br
@@ -14,7 +13,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Viva Las Vegas (1964)
+          h4.card-title-text.text-warning.text-center Viva Las Vegas (1964)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster1.jpg", style="width:25%" alt="Viva Las Vegas poster")
           br
           p.card-text.text-justify
@@ -24,7 +23,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Paradise Canyon (1935)
+          h4.card-title-text.text-warning.text-center Paradise Canyon (1935)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster2.jpg", style="width:25%", alt="Paradise Canyon poster")
           br
           p.card-text.text-justify
@@ -34,7 +33,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Guys And Dolls (1955)
+          h4.card-title-text.text-warning.text-center Guys And Dolls (1955)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster3.jpg", style="width:25%", alt="Guys And Dolls poster")
           br
           p.card-text.text-justify
@@ -44,7 +43,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center The Thing (From Another World) (1951)
+          h4.card-title-text.text-warning.text-center The Thing (From Another World) (1951)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster4.jpg", style="width:25%", alt="The Thing poster")
           br
           p.card-text.text-justify
@@ -55,7 +54,7 @@ block content
       .row
         .card.mx-auto
           br
-          h4.card-title.text-danger.text-center Hot-Rod Girl (1956)
+          h4.card-title-text.text-warning.text-center Hot-Rod Girl (1956)
           img.img-resonsive.mx-auto.d-block(src="./images/moviePoster5.jpg", style="width:25%", alt="Hot-Rod Girl poster")
           br
           p.card-text.text-justify
@@ -66,7 +65,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Dragstrip Riot (1958)
+          h4.card-title-text.text-warning.text-center Dragstrip Riot (1958)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster6.jpg", style="width:25%", alt="Dragstrip Riot")
           br
           p.card-text.text-justify
@@ -77,7 +76,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center La Dolce Vita (1960)
+          h4.card-title-text.text-warning.text-center La Dolce Vita (1960)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster7.jpg", style="width:25%", alt="La Dolce Vita poster")
           br
           p.card-text.text-justify
@@ -88,7 +87,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Vertigo (1958)
+          h4.card-title-text.text-warning.text-center Vertigo (1958)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster8.jpg", style="width:25%", alt="Vertigo poster")
           br
           p.card-text.text-justify
@@ -99,7 +98,7 @@ block content
       .row
         .card
           br
-          h4.card-title.text-danger.text-center Ocean's Eleven (1960)
+          h4.card-title-text.text-warning.text-center Ocean's Eleven (1960)
           img.img-responsive.mx-auto.d-block(src="./images/moviePoster9.jpg", style="width:25%", alt="Ocean's Eleven")
           br
           p.card-text.text-justify
