--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -1,7 +1,13 @@
 extends layout
 
 block content
-  h2= title
+  section.jumbotron.text-center.bg-dark
+    .container
+      h1.jumbotron-heading-text Reserve A Film
+      p.lead.text-white
+        | Beat the line-ups and reserve a ticket and seat ahead of time. Combine your admission with concession snacks for a truly classic entertainment night.
+  br
+  br
   
-  p
+  p.text-white
   | Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.
