--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -18,6 +18,18 @@ block content
           br
           p.card-text.text-justify
             | All musically gifted racecar-driver Lucky Jackson (Elvis Presley) wants in Las Vegas is to score enough money for a new car motor, so he can win the Grand Prix. When he encounters sexy swimming instructor Rusty Martin (Ann-Margret), he considers staying around longer. After Lucky loses his winnings in the hotel pool, he's forced to remain in Vegas long enough to win back his dough -- but now he also wants to win Rusty's heart. Unfortunately, so does his slick racing enemy, Elmo Mancini (Cesare Danova).
+          br
+          .container
+            .btn-toolbar(role="toolbar", aria-label="Show Times Toolbar")
+              .btn-group.mr-2(role="group", aria-label="First Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 11:00 A.M.
+              .btn-group.mr-2(role="group", aria-label="Second Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 2:00 P.M.
+              .btn-group.mr-2(role="group", aria-label="Third Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 6:00 P.M.
       br
       br
       .row
