--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -11,8 +11,7 @@ html
   body
     //- Atomic Films Brand Section
     .container-fluid#afBrandMotto
-      a.atomicFilms-brand(href="/")
-        .atomicFilms-brand-text.float-left Atomic Films
+      .atomicFilms-brand-text.float-left Atomic Films
           //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
           //img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
       .row.py-3
@@ -25,6 +24,8 @@ html
           span.navbar-toggler-icon
         .collapse.navbar-collapse#mainNavbar
           ul.nav.ml-auto
+            li.nav-item
+              a.nav-link(href="/") Movies
             li.nav-item
               a.nav-link(href="/movies") Synopsis
             li.nav-item
