--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -6,8 +6,26 @@ block content
       h1.jumbotron-heading-text Reserve A Film
       p.lead.text-white
         | Beat the line-ups and reserve a ticket and seat ahead of time. Combine your admission with concession snacks for a truly classic entertainment night.
-  br
-  br
-  
-  p.text-white
-  | Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.
+    .card
+      .card-body.bg-dark
+        h5.card-title-text.pb-5.text-justify Nice choice! You've selected a great classic film to enjoy!
+        //- WILL NEED TO ADD A /CONFIRM PAGE TO CONTROLLER IN FUTURE!!!
+        form(name="reserve", action="/confirm", method="post") 
+          .form-group.row
+            label.col-form-label.col-sm-2.text-white(for="movie") Movie:
+            .col-sm-6
+              input#email.form-control(type="email", name="email", required, placeholder="Enter your email address")
+          .form-group.row
+            label.col-form-label.col-sm-2.text-white(for="name") Name:
+            .col-sm-6
+              input#name.form-control(type="text", name="name", required, placeholder="Enter your name")
+          .form-group.row
+            label.col-form-label.col-sm-2.text-white(for="message") Message:
+            .col-sm-10
+              textarea#message.form-control(rows="5", name="message", required, placeholder="Type your message")
+          .form-group.row
+            label.col-form-label.col-sm-2
+              .col-sm-6
+                button.btn.btn-info(type="submit") Send Message
+    br
+    br
